--- a/_config.yun.yml
+++ b/_config.yun.yml
@@ -6,7 +6,7 @@ language: zh-CN
 #通知栏
 notice:
   enable: true
-  content: ※置顶:为什么我这么快就要上大学了!!！十二年就这样过啦？？？？| 2024-06-14 22:25:00(UTC+8)
+  content: ※置顶:我要回南方！这哈尔滨越来越难呆了！| 2024-09-10 20:59:51(UTC+8)
 say:
   enable: true
   api: https://cdn.jsdelivr.net/gh/ElpsyCN/say@gh-pages/sentences.json
