--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,9 @@
 # Site/网站
 title: MuYi Pavilion | 沐佚苑阁
 subtitle: etude pour les petites dreamland.
-description: ……楽しい旅をします あなたと一緒に、旅を
+description: 
+- 世界は大きな宝石箱みたいなんだ
+- 中には輝く宝石がいっぱい詰まってる
 keywords:
  - JayMuShui
  - 沐
@@ -42,8 +44,9 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
-- README.md
+#Skip render/跳过渲染
+skip_render: 
+  - README.md
 
 # Writing/文章
 new_post_name: :title.md 
@@ -124,5 +127,5 @@ deploy:
   type: git
   repo: https://github.com/JayMuShui/jaymushui.github.io
   branch: master
-  message: 更新2篇文章 # 你可以自定义此次部署更新的说明
+  message:  对博客的一些小细节进行调整，同时证明自己还在维护网站（笑）  # 你可以自定义此次部署更新的说明
 
