--- a/_config.yun.yml
+++ b/_config.yun.yml
@@ -6,7 +6,7 @@ language: zh-CN
 #通知栏
 notice:
   enable: true
-  content: ※置顶:OK！北京时间2025年01月07日8:20长春龙嘉国际机场CGQ转南昌昌北国际机场KHN飞桂林双江国际机场KWL！| 2024-11-16 19:25:41(UTC+8)
+  content: ※置顶:今年我要去广西壮族自治区梧州市/防城港市东兴市、广东省深圳市/东莞市/珠海市/广州市、辽宁省沈阳市、山东省青岛市、香港/澳门特别行政区、俄罗斯国哈巴罗夫斯克（伯力）等······ | (UTC+8)2025-02-21 01:45:12
 say:
   enable: true
   api: https://cdn.jsdelivr.net/gh/ElpsyCN/say@gh-pages/sentences.json
