--- a/_config.yun.yml
+++ b/_config.yun.yml
@@ -82,8 +82,8 @@ banner:
     icon: cib:apache-airflow
 bg_image: #图片背景
   enable: true
-  url: https://2dcaf961.telegraph-image-2qa.pages.dev/file/6f397636d7cee1ad17a70.jpg
-  dark: https://2dcaf961.telegraph-image-2qa.pages.dev/file/f4874c2bbc98f106d2e9b.jpg
+  url: https://cloudflare-imgbed-telegraph.pages.dev/file/1741887074652_light_wallpaper.jpg
+  dark: https://cloudflare-imgbed-telegraph.pages.dev/file/1741887076819_dark_wallpaper.jpg
   blur: 5px # 设置背景模糊程度
   opacity: 1.0
 trianglify: #不规则图形背景
@@ -103,7 +103,7 @@ fireworks: #烟花
 
 ##侧边栏
 sidebar:
-  bg_image: https://telegraph-img-by-bot.pages.dev/file/56a21040acdf06a3b8ccc.jpg
+  bg_image: https://cloudflare-imgbed-telegraph.pages.dev/file/56a21040acdf06a3b8ccc.jpg
   bg_position: bottom 0rem center
   tagcloud:
     enable: false
@@ -168,12 +168,12 @@ social:
     color: '#5A6DE2'
   
   - name: QQ
-    link: https://telegraph-img-by-bot.pages.dev/file/7d33f995cab76537ff1db.jpg
+    link: https://cloudflare-imgbed-telegraph.pages.dev/file/7d33f995cab76537ff1db.jpg
     icon: ri:qq-line
     color: '#12B7F5'
   
   - name: 微信公众号 | WeChat Public Platform
-    link: https://telegraph-img-by-bot.pages.dev/file/1729946797712_公众号.png
+    link: https://cloudflare-imgbed-telegraph.pages.dev/file/1729946797712_公众号.png
     icon: ri:wechat-fill
     color: '#54dc64'
   
@@ -232,17 +232,17 @@ reward:
   # url: https://github.com/YunYouJun/yunyoujun.github.io/issues/96
   methods:
     - name: 支付宝
-      path: https://telegraph-img-by-bot.pages.dev/file/1729947121338_Alipay.jpg
+      path: https://cloudflare-imgbed-telegraph.pages.dev/file/1741886673212_Alipay.png
       color: '#00A3EE'
       icon: ri:alipay-line
       #link:
     - name: 微信支付
-      path: https://telegraph-img-by-bot.pages.dev/file/1729947118099_WeChatPay.png
+      path: https://cloudflare-imgbed-telegraph.pages.dev/file/1741886716357_WechatPay.png
       color: '#2DC100'
       icon: ri:wechat-pay-line
       #link:
     - name: QQ 支付
-      path: https://telegraph-img-by-bot.pages.dev/file/1729947117502_QQPay.png
+      path: https://cloudflare-imgbed-telegraph.pages.dev/file/1741886702942_QQPay.png
       color: '#12B7F5'
       icon: ri:qq-line
       #link:
