--- a/_config.yml
+++ b/_config.yml
@@ -127,5 +127,5 @@ deploy:
   type: git
   repo: https://github.com/JayMuShui/jaymushui.github.io
   branch: master
-  message:  更新图源url，更换博客背景  # 你可以自定义此次部署更新的说明
+  message:  更新自我介绍页面的链接与内容  # 你可以自定义此次部署更新的说明
 
